# AI-Orchestration

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FRONTEND_DEBUG_IMPLEMENTATION_PLAN.md  KANBAN_IMPLEMENTATION_HANDOFF.md  Kerapathys_Local_Build_Guide.docx  Makefile  Phase0_Foundation_Setup_Guide.docx  Phase1_DeerFlow_V2_Integration_Guide.docx  README.md  YouTube-Production-AI-Guidance.docx  _fix_loggers.py  _validate_phase234.py  _validate_phase56.py  _validate_phase7.py  check_pipeline_detailed.py  check_pipeline_state.py  pyproject.toml  requirements-windows.txt  requirements.txt  test_dependencies.py  todo.md  worklog.md
.claude/: stepfunKeySetup.txt
.github/: mlc_config.json  pull_request_template.md
apps/api/: background_tasks.py  dependencies.py  events.py  main.py
apps/web/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
apps/worker/: main.py  orchestrator_worker.py
data/skills/: researcher.md  script_writer.md  seo_specialist.md  trend_looker.md  visual_planner.md
docs/: ANALYSIS_REPORT.md  ARCHITECTURE.md  CHANGES.json  CODEBASE_ANALYSIS_PLAN.md  HOW_TO_PULL_AND_RUN.md  IMPLEMENTATION_PLAN_V3.md  KIDS_GUIDE.md  PHASE5_IMPLEMENTATION_PLAN.md  PHASE_2_3_IMPLEMENTATION_GUIDE.md  SUPABASE_SETUP.md
docs/archive/: ANALYSIS_PLAN.md  API_REFERENCE.md  CODEBASE_ANALYSIS_PLAN.md  DASHBOARD.md  DECISIONS.md  FIX_PLAN_DEEP_RESEARCH_FLAWS.md  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_V2.md  IMPLEMENTATION_PLAN_V4.md  P0_FIX_PLANS.md  PHASE_0_ANALYSIS.md
docs/internal/: ANALYSIS.md
docs/plans/: dependency-resolution-plan.md
freerouter/: .env.example  .gitignore  Dockerfile  FIXES_APPLIED.md  LICENSE  README.md  USAGE.md  docker-compose.yml  pyproject.toml  quickstart.py  requirements.txt  start.bat  start.sh  test_chat.json
freerouter/.claude/: settings.local.json
freerouter/config/: proxy_server_config.yaml
freerouter/examples/: __init__.py  examples.py
freerouter/src/freerouter/: __init__.py  __main__.py  circuit_breaker.py  classifier.py  cli.py  config.py  config_manager.py  exceptions.py  health.py  provider_instances.py  providers.py  proxy.py  proxy_server.py  rate_limit_store.py  router.py  server.py  storage.py  websearch.py
freerouter/src/freerouter/adapters/: __init__.py  apifreellm.py
freerouter/src/freerouter/web/: __init__.py  app.py
freerouter/src/freerouter/web/static/: index.html
freerouter/src/freerouter/web/static/css/: styles.css
freerouter/src/freerouter/web/static/js/: app.js  chat.js  pipeline.js  providers.js  ui.js
freerouter/tests/: __init__.py  test_fixes.py  test_freerouter.py
scripts/: auto_production.py  daily_topic_scan.py  run_pipeline.py  test_full_pipeline.py  test_pipeline_minimal.py  test_pipeline_quick.py  test_pipeline_smoke.py
supabase/: README.md
supabase/migrations/: 001_initial_schema.sql  002_research_cache.sql
tests/: test_adaptation_router.py  test_agent_bootstrap.py  test_chat_agent.py  test_core.py  test_core_cache.py  test_crew_config.py  test_cross_script_learning.py  test_evaluation_loop.py  test_exa_integration.py  test_iteration_log.py  test_kanban.py  test_langgraph_pipeline.py  test_memory.py  test_memory_async.py  test_notion.py  test_orchestrator_wire.py  test_p0_fixes.py  test_phase234.py  test_phase56.py  test_phase7.py  test_pipeline_wire.py  test_research_cache.py  test_router.py  test_topic_finder_db.py  test_visual.py  test_youtube.py  test_youtube_routes.py  test_zep_integration.py
tests/integration/: conftest.py  test_exa_integration.py  test_freerouter_integration.py  test_notion_integration.py  test_supabase_integration.py  test_web_search_integration.py  test_youtube_integration.py  test_zep_integration.py
tests/phase_A0_bootstrap/: conftest.py  test_auth_middleware.py  test_config.py  test_database_router.py  test_dependencies.py  test_error_codes.py  test_errors.py  test_logger.py  test_main_app.py  test_operation_result.py  test_supabase_client.py  test_types.py
tests/phase_A10_final_unit/: conftest.py  test_config_comprehensive.py  test_health_routes_advanced.py  test_notion_colors.py
tests/phase_A1_router/: conftest.py  test_router_client.py
tests/phase_A2_memory/: conftest.py  test_memory_client.py
tests/phase_A3_youtube/: conftest.py  test_youtube_client.py
tests/phase_A4_notion/: conftest.py  test_notion_client.py
tests/phase_A5_exa/: conftest.py  test_exa_client.py
tests/phase_A6_api/: conftest.py  test_analytics_routes.py  test_chat_routes.py  test_dlq_routes.py  test_kanban_routes.py  test_memory_routes.py  test_pipeline_routes.py  test_provider_routes.py  test_settings_routes.py  test_topic_routes.py  test_visual_routes.py
tests/phase_A7_errors/: conftest.py  test_circuit_breaker.py  test_dead_letter.py  test_errors_hierarchy.py  test_retry.py
tests/phase_A8_cross_module/: conftest.py  test_agents_base.py  test_agents_kanban_callback.py  test_agents_registry.py  test_content_factory_models.py  test_core_cache.py  test_core_escalation.py  test_core_json_utils.py  test_core_llm.py  test_core_progress.py  test_core_research_cache.py  test_core_thoughts.py  test_memory_helpers.py  test_memory_init_zep.py  test_memory_schemas.py  test_music_models.py  test_music_section_brief.py  test_router_capabilities.py  test_router_tracker.py  test_router_web_search.py  test_source_library.py  test_topic_finder_feedback.py  test_topic_finder_models.py  test_zep_store.py
tests/phase_A9_final/: conftest.py  test_analytics_tracker.py  test_background_tasks.py  test_chat_tools.py  test_checkpointer.py  test_deep_research.py  test_events.py  test_music_agent.py  test_music_arc_designer.py  test_music_reader.py  test_music_transitions.py  test_orchestration_db.py  test_orchestration_graphs.py  test_orchestration_init.py  test_orchestration_master.py  test_orchestration_memory.py  test_orchestration_models.py  test_orchestration_monitor.py  test_orchestration_nodes.py  test_orchestration_review.py  test_orchestration_scheduler.py  test_synthesis.py  (+14 more)
(+78 files in other folders)
