[project]
name = "youtube-pipeline"
version = "0.1.0"
description = "Multi-agent YouTube video production pipeline"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "httpx>=0.27",
    "instructor>=1.0",
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev     = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5"]
memory  = ["zep-cloud>=2.0"]
youtube = ["google-api-python-client>=2.0", "google-auth-oauthlib>=1.0"]
notion  = ["notion-client>=2.0"]
pipeline = ["crewai>=0.80", "typer>=0.12", "rich>=13.0"]
all     = ["youtube-pipeline[dev,memory,youtube,notion,pipeline]"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["packages*", "apps*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
