[project]
name = "ai-orchestration"
version = "0.1.0"
description = "Multi-agent YouTube video production pipeline"
requires-python = ">=3.10,<3.14"  # CrewAI requires Python <=3.13
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",

    # Core infrastructure
    "pydantic>=2.11.0,<3.0.0",
    "pydantic-settings>=2.10.0",
    "structlog>=25.0.0",
    "httpx>=0.28.0,<0.29.0",
    "python-dotenv>=1.1.0",
    "nest-asyncio>=1.6.0",
    "pyyaml>=6.0",
    
    # LLM integration
    "instructor>=1.3.3",
    "openai>=1.83.0",
    
    # Database
    "supabase>=2.0.0",
    
    # Search
    "exa-py>=1.0.0",
]

[project.optional-dependencies]
# Development tools
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

# Zep Cloud memory integration
memory = [
    "zep-cloud>=0.1.0",
]

# YouTube Data API integration
youtube = [
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "youtube-transcript-api>=0.6.0",
]

# Notion API integration
notion = [
    "notion-client>=2.0.0",
]

# Pipeline CLI tools
pipeline = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

# LangGraph state machine with PostgreSQL checkpointer
# NOTE: LangGraph works with Python 3.10-3.14+
langgraph-deps = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "psycopg[binary]>=3.1.0",
    "psycopg-pool>=3.2.0",
]

# CrewAI agents - multi-agent framework
# WARNING: CrewAI requires Python <=3.13 (NOT compatible with Python 3.14+)
# If you're on Python 3.14+, use langgraph-deps only
crewai-deps = [
    "crewai>=1.0.0",
    "crewai-tools>=0.14.0",
    "litellm>=1.52.0",
]

# Full installation with BOTH CrewAI and LangGraph
# WARNING: This will FAIL on Python 3.14+ because CrewAI requires Python <=3.13
# For Python 3.14+: use pip install -e ".[dev,memory,youtube,notion,pipeline,langgraph-deps]"
all = [
    "ai-orchestration[dev,memory,youtube,notion,pipeline,langgraph-deps,crewai-deps]",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["packages*", "apps*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests requiring real services and .env credentials",
]
filterwarnings = [
    # supabase-py v2.x triggers DeprecationWarning internally for timeout/verify params.
    # This is a known issue in the library — our code never passes these params.
    "ignore::DeprecationWarning:supabase",
]
