[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freerouter"
version = "1.0.0"
description = "Smart LLM proxy that always prefers free models and picks the best model based on task"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "FreeRouter Team"}
]
keywords = ["llm", "proxy", "openai", "free", "router"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "litellm[proxy]>=1.50.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "python-dotenv>=0.20.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
freerouter = "freerouter.cli:app"

[project.urls]
Homepage = "https://github.com/freerouter/freerouter"
Documentation = "https://github.com/freerouter/freerouter#readme"
Repository = "https://github.com/freerouter/freerouter"

[tool.hatch.build.targets.wheel]
packages = ["src/freerouter"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.black]
line-length = 120