[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freerouter"
version = "3.1.0"
description = "LiteLLM-based task router — 2 providers (OpenRouter, Ollama Cloud), 7 routes, multi-fallback"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "FreeRouter Team"}
]
keywords = ["llm", "proxy", "openai", "free", "router"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "litellm>=1.52.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]

# CLI entry removed in v3 — use: python -m freerouter
# [project.scripts]
# freerouter = "freerouter.__main__:main"

[project.urls]
Homepage = "https://github.com/freerouter/freerouter"
Documentation = "https://github.com/freerouter/freerouter#readme"
Repository = "https://github.com/freerouter/freerouter"

[tool.hatch.build.targets.wheel]
packages = ["src/freerouter"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.black]
line-length = 120